@@ -459,3 +459,16 @@ Parameter 	Description
   e.g. when the label contains only a list of extension (%X)
   but selected files do not have extension - most likely, there should be other examples..
   => label must be expanded and checked and kept before testing for candidate
+
+- "write even if default" was added for version only
+  but version should not been written in desktop files (not in the spec)
+  so version should be explictely written (as type)
+
+- an empty list is not a default value
+  e.g. basenames default value = [*]
+  after deleting this default value in the UI, we should write basenames=[] in the I/O provider
+  so that we really have an empty list
+
+- 2010-06-03: ui enhancement
+  sortable column headers in tab as basenames, mimetypes, and so on, should have
+  a small indicator of the current sort order
